--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <service android:name=".irc.IRCService"></service>
         <activity android:name=".activity.ConversationsActivity"></activity>
+        <activity android:name=".activity.JoinActivity" android:theme="@android:style/Theme.Dialog" android:label="@string/join_activity_label"></activity>
     </application>
 
 </manifest>
