--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".activity.ConversationsActivity"></activity>
         <activity android:name=".activity.JoinActivity" android:theme="@android:style/Theme.Dialog" android:label="@string/join_activity_label"></activity>
         <activity android:label="Users" android:theme="@android:style/Theme.Dialog" android:name=".activity.UserListActivity"></activity>
+        <activity android:name=".activity.SettingsActivity"></activity>
     </application>
 
 </manifest>
