Refactored to use PircBotX, a more actively maintained fork of PircBot

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
     compile 'com.android.support:support-v4:19.1.0'
-    compile 'pircbot:pircbot:1.5.0'
+    compile 'org.pircbotx:pircbotx:2.0.1'
 }
