--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:19.1.0'
-    compile 'org.pircbotx:pircbotx:2.0.1'
+    compile 'org.slf4j:slf4j-android:1.7.8'
+    compile 'org.pircbotx:pircbotx:2.0'
 }
