Fixed onDisconnect to reopen MainActivity properly, changed styling of notices, added nice titles and other customisation to ListEditActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
-            android:name=".activity.ListViewEditActivity"
+            android:name=".activity.ListEditActivity"
             android:label="@string/title_activity_list_view_edit"
             android:theme="@android:style/Theme.Dialog">
         </activity>
