Added ChannelSettingsActivity, allowing users to set common channel modes in a GUI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,11 @@
         <activity
             android:name=".activity.ListEditActivity"
             android:label="@string/title_activity_list_view_edit"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name=".activity.ChannelSettingsActivity"
+            android:label="@string/title_activity_channel_settings" >
         </activity>
     </application>
 
