--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SET_DEBUG_APP" />
@@ -39,26 +39,26 @@
         <activity
             android:name=".activity.JoinActivity"
             android:label="@string/join_activity_label"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@style/Dialog" />
         <activity
             android:name=".activity.UserListActivity"
             android:label="@string/userlist_activity_label"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@style/Dialog" />
         <activity android:name=".activity.SettingsActivity" />
         <activity
             android:name=".activity.ChannelListActivity"
             android:label="@string/title_activity_channel_list"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Dialog" >
         </activity>
         <activity
             android:name=".activity.NoticeActivity"
             android:label="@string/title_activity_notice"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Dialog" >
         </activity>
         <activity
             android:name=".activity.ListEditActivity"
             android:label="@string/title_activity_list_view_edit"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Dialog" >
         </activity>
         <activity
             android:name=".activity.ChannelSettingsActivity"
