--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "uk.org.mattford.scoutlink"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 25
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
@@ -25,24 +28,21 @@ android {
         exclude 'META-INF/ASL2.0'
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
     productFlavors {
     }
 }
 
 repositories {
-    maven {
-        url 'https://oss.sonatype.org/content/repositories/snapshots'
-    }
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'org.slf4j:slf4j-android:1.7.8'
-    compile 'org.pircbotx:pircbotx:2.1-SNAPSHOT'
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'org.pircbotx:pircbotx:2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.android.gms:play-services:10.2.1'
 }
