--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ android {
         applicationId "uk.org.mattford.scoutlink"
         minSdkVersion 16
         targetSdkVersion 25
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,7 +41,6 @@ dependencies {
     implementation 'org.pircbotx:pircbotx:2.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.3'
     implementation group: 'com.github.JakeWharton', name: 'ViewPagerIndicator', version: '2.4.1'
-    implementation 'com.android.support:multidex:1.0.3'
 }
