* Bump version code * Add spanish translations * Translate list activity titles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="uk.org.mattford.scoutlink"
-    android:versionCode="15"
-    android:versionName="1.4" >
+    android:versionCode="16"
+    android:versionName="1.5" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +12,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="uk.org.mattford.scoutlink.ScoutlinkApplication">
+        android:name="uk.org.mattford.scoutlink.ScoutlinkApplication"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!-- Google Analytics Version v4 needs this value for easy tracking -->
         <!--<meta-data android:name="com.google.android.gms.analytics.globalConfigResource"
