--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "uk.org.mattford.scoutlink"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -35,12 +35,12 @@ android {
 dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.8'
     implementation 'org.pircbotx:pircbotx:2.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'com.google.android.gms:play-services-analytics:16.0.6'
-    implementation group: 'com.github.JakeWharton', name: 'ViewPagerIndicator', version: '2.4.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
-    def room_version = "2.1.0-alpha03"
-
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.2.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    annotationProcessor "androidx.room:room-compiler:2.2.0"
 }
