--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,14 @@ android {
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-android:1.7.8'
-    implementation 'org.pircbotx:pircbotx:2.1'
+    implementation 'org.slf4j:slf4j-android:1.7.30'
+    implementation 'org.pircbotx:pircbotx:2.2-SNAPSHOT'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
-    implementation "androidx.room:room-runtime:2.2.0"
+    implementation "androidx.room:room-runtime:2.2.5"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    annotationProcessor "androidx.room:room-compiler:2.2.0"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
