--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     }
     productFlavors {
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -42,5 +45,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
