--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "uk.org.mattford.scoutlink"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 28
     }
     buildTypes {
@@ -39,7 +40,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.30'
     implementation 'org.pircbotx:pircbotx:2.2-SNAPSHOT'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation "androidx.room:room-runtime:2.2.5"
