--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ android {
         applicationId "uk.org.mattford.scoutlink"
         minSdkVersion 16
         targetSdkVersion 28
+        multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled true
+            shrinkResources true
         }
     }
     packagingOptions {
@@ -38,9 +39,9 @@ android {
 
 dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.30'
-    implementation 'org.pircbotx:pircbotx:2.2-SNAPSHOT'
+    implementation 'org.pircbotx:pircbotx:2.3-SNAPSHOT'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation "androidx.room:room-runtime:2.2.5"
@@ -49,4 +50,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
