--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     android:versionName="1.5" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -15,10 +16,6 @@
         android:theme="@style/AppTheme"
         android:name="uk.org.mattford.scoutlink.ScoutlinkApplication"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <!-- Google Analytics Version v4 needs this value for easy tracking -->
-        <!--<meta-data android:name="com.google.android.gms.analytics.globalConfigResource"
-            android:resource="@xml/global_tracker" />-->
 
         <activity android:name=".activity.MainActivity">
             <intent-filter>
