--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 28
@@ -37,9 +38,10 @@ android {
 dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.30'
     implementation 'org.pircbotx:pircbotx:2.3-SNAPSHOT'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.android.material:material:1.2.0'
 
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
