fix crash on start in android 8

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
         <activity
             android:name=".activity.JoinActivity"
             android:label="@string/join_activity_label"
-            android:theme="@style/Dialog"
-            android:screenOrientation="locked"/>
+            android:theme="@style/Dialog" />
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/action_settings"
@@ -40,14 +39,12 @@
         <activity
             android:name=".activity.ChannelListActivity"
             android:label="@string/title_activity_channel_list"
-            android:theme="@style/Dialog"
-            android:screenOrientation="locked">
+            android:theme="@style/Dialog">
         </activity>
         <activity
             android:name=".activity.ListEditActivity"
             android:label="@string/title_activity_list_view_edit"
-            android:theme="@style/Dialog"
-            android:screenOrientation="locked">
+            android:theme="@style/Dialog">
         </activity>
         <activity
             android:name=".activity.ChannelSettingsActivity"
