--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,16 +44,17 @@ dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.30'
     implementation 'org.pircbotx:pircbotx:2.3-SNAPSHOT'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "androidx.preference:preference:1.1.1"
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
-    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.6"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.6"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 }
