--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '29.0.3'
+    compileSdkVersion 32
     defaultConfig {
         applicationId "uk.org.mattford.scoutlink"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion 19
+        targetSdkVersion 32
         multiDexEnabled true
         javaCompileOptions {
             annotationProcessorOptions {
@@ -20,14 +19,9 @@ android {
         release {}
     }
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0']
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -38,23 +32,25 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'uk.org.mattford.scoutlink'
 }
 
 dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.30'
     implementation 'org.pircbotx:pircbotx:2.3-SNAPSHOT'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.preference:preference:1.1.1"
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation "androidx.preference:preference:1.2.0"
+    implementation 'com.google.firebase:firebase-analytics:21.1.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.13'
+    implementation 'com.google.android.material:material:1.6.1'
 
-    implementation "androidx.room:room-runtime:2.2.6"
+    implementation "androidx.room:room-runtime:2.4.3"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    annotationProcessor "androidx.room:room-compiler:2.2.6"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 }
